# HydraMesh

./: .buildinfo  .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCF_AUDIO_SPEC.html  DCF_CODE_REVIEW.html  DCF_GAME_SPEC.html  Dockerfile  LICENSING.md  Makefile  README.markdown  README.md  RELEASING.md  SECURITY.md  SUPERPACK_SPEC.html  TRAINING_DATA_LICENSE  WIRE_QUANTUM_SPEC.html  briefing.markdown  build_hydramesh_dataset.py  dcf_design_spec.markdown  dockerfile-edit-gen.sh  edit-flake.sh  flake-edit-gen.sh  flake.nix  genindex.html  hydramesh_adapter.jsonl  hydramesh_adapter_qwen.jsonl  hydramesh_certify.jsonl  hydramesh_certify_qwen.jsonl  hydramesh_unified.jsonl  hydramesh_unified_qwen.jsonl  hydramesh_wire.jsonl  hydramesh_wire_qwen.jsonl  hydramodem-1.0.0.tar.gz.sha256  index.html  (+6 more)
C_SDK/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.txt  LICENSE  Makefile  README.markdown  README.md  c_sdk_fixes.patch  compilation-guide.markdown  docker-compose.yml  flake.nix
C_SDK/cmake/: DCFConfig.cmake.in  dcf.pc.in
C_SDK/examples/DOOM/: README.markdown
C_SDK/include/: dcf_client.h  dcf_connpool.h  dcf_error.h  dcf_interface.h  dcf_platform.h  dcf_plugin_manager.h  dcf_ringbuf.h  dcf_serialization.h  dcf_types.h
C_SDK/include/dcf_sdk/: dcf_config.h  (+1 more)
C_SDK/node/: dcf_mesh_runtime.h  dcf_modem.h  dcf_proto.h  dcfnode.c
C_SDK/plugins/: DOOM_UDP_transport.c  DOOM_udp_transport.c  can_transport.c  config_unifier.c  dcf_udp_transport.c  irc_transport.c  modbus_transport.c  namedpipe_transport.c  quic_transport.c  sctp_transport.c  serial_transport.c  unified_dual_transport.c  unixsocket_transport.c
C_SDK/proto/: messages.pb-c.h
C_SDK/src/: client.c  dcf_config.c  dcf_connpool.c  dcf_error.c  dcf_platform.c  dcf_ringbuf.c
C_SDK/tests/: test_audio_certify.c  test_fec_certify.c  test_game_certify.c  test_mesh_certify.c  test_modem_fec.c  test_modem_loopback.c  test_modulation_certify.c  test_monitor_certify.c  test_proto_certify.c  test_snake_certify.c  test_snake_dsp.c  test_snake_l2.c  test_sstv_certify.c  test_suite.c  test_superpack_certify.c  test_text_certify.c  test_wire_certify.c
HandHelds/core/: Cargo.toml
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
codec/: Cargo.toml  audio_vectors.gen.h  build.rs  demod_audio.h  demod_fec.h  demod_frame.h  demod_game.h  demod_mesh.h  demod_modulation.h  demod_monitor.h  demod_snake.h  demod_sstv.h  demod_superpack.h  demod_text.h  fec_vectors.gen.h  frame.rs  game_vectors.gen.h  mesh_vectors.gen.h  modulation_vectors.gen.h  monitor_vectors.gen.h  snake_vectors.gen.h  sstv_vectors.gen.h  superpack_vectors.gen.h  text_vectors.gen.h
codec-wasm/: Cargo.toml
codec-wasm/src/: lib.rs
codec/examples/: game_loopback.rs  jam_loopback.rs
codec/faust/: dcf_modem.dsp  dcf_pm_codec.dsp  dcf_pm_codec.gen.c  dcf_pm_faust.c  dcf_rf_modulator.dsp  dcf_rf_modulator.gen.c
codec/src/: audio.rs  fec.rs  game.rs  lib.rs  mesh.rs  modulation.rs  monitor.rs  snake.rs  sstv.rs  superpack.rs  text.rs
codec/tests/: certify.rs  certify_audio.rs  certify_fec.rs  certify_game.rs  certify_mesh.rs  certify_modulation.rs  certify_monitor.rs  certify_snake.rs  certify_sstv.rs  certify_superpack.rs  certify_text.rs
cpp/: .gitignore  CMakeLists.txt  Dockerfile.steam
cpp/proto/: dcf.proto
cpp/src/: dcf_node.cpp  net_steam.cpp  steam_gameserver.cpp  steam_lobby.cpp
cpp/tests/: certify.cpp  certify_fec.cpp  certify_superpack.cpp  gns_loopback.sh
haskell/: dcf-wire.cabal
haskell/test/: Certify.hs
langgraph_agents/: DOCKERHUB.md  README.md  agents.jsonc  pyproject.toml  pytest.ini
langgraph_agents/langgraph_agents/: __init__.py  __main__.py  agent_graph.py  api_server.py  cli.py  coordinator.py  llm_node.py  mcp_server.py  mcp_tools.py  runner.py  state.py  streaming_bridge.py  tui.py
python/: Dockerfile  README.md  config.json.example  dcf.py  dcf_node.py  pyproject.toml  pytest.ini  python_README.markdown  requirements.txt
python/MCP/: __init__.py  audiolab_core.py  certify_sdk.py  fec_vectors.json  feclab_core.py  gamelab_core.py  gen_audio_dump.py  gen_audio_vectors.py  gen_fec_vectors.py  gen_game_vectors.py  gen_mesh_vectors.py  gen_modulation_vectors.py  gen_monitor_vectors.py  gen_snake_vectors.py  gen_sstv_vectors.py  gen_superpack_vectors.py  gen_text_vectors.py  golden_vectors.json  mesh_vectors.json  meshlab_core.py  modulationlab_core.py  monitor_vectors.json  monitorlab_core.py  pm_param_vectors.json  snakelab_core.py  sstv_vectors.json  sstvlab_core.py  streamdb.py  superpack.py  text_vectors.json  textlab_core.py  verify_laws.py  wirelab_core.py  wirelab_mcp.py
python/dcf/: __init__.py  bridge.py  cli.py  client.py  config.py  dcf___init__.py  dcf_cli.py  dcf_client.py  dcf_config.py  dcf_master.py  dcf_networking.py  dcf_plugins.py  dcf_redundancy.py  dcf_serialization.py  dcf_tui.py  dcf_utils.py  hydramodem_cffi.py  l2eth.py  master.py  mcp_client.py  mcp_server.py  mesh_runtime.py  networking.py  plugins.py  proto.py  quanta.py  radio.py  redundancy.py  serialization.py  sstv_demo.py  transport.py  tui.py  udp_node.py  utils.py  wiretap.py
python/examples/: wiretap_demo.py
python/modem/: __init__.py  acoustic.py  acoustic_frame.py  demo.sh  demod_dcf_acoustic_modem.dsp  faust_jit.py  iq.py  main.py  sdr.py  uplink_demo.py
python/tests/: test.py  test_acoustic.py  test_bridge.py  test_dcf_rec.py  test_eavesdrop_leak.py  test_egress.py  test_fec.py  test_iq_loopback.py  test_mcp_server_client.py  test_mesh_runtime.py  test_quanta_bridge.py  test_radio.py  test_sense_mac.py  test_sense_mesh.py  test_sense_model.py  test_sense_network.py  test_sense_schema.py  test_snake_l2.py  test_transport.py
rust/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  cargo.toml  config.json  dcf_config.toml  flake.nix
rust/plugins/: thunderbolt_test.rs
rust/proto/: messages.proto  services.proto
rust/src/: lib.rs  main.rs  mesh_runtime.rs  universal_shim.rs
rust/tests/: comms_channel.rs
web/bridge/: Cargo.toml
(+424 files in other folders)
