[package]
name = "dcf-wire-codec"
version = "0.3.0"
edition = "2021"
description = "DeMod 17-byte wire frame codec + DCF-Audio (collaborative audio over the wire) — reference and certification"
license = "LGPL-3.0"
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"

[features]
# Opus codec (id 0). Pulls libopus via the `opus` crate; not byte-certified.
opus = ["dep:opus"]
# Faust phase-mod synthesis (id 2). build.rs compiles faust/dcf_pm_codec.gen.c.
pm = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opus = { version = "0.3", optional = true }

[build-dependencies]
cc = "1"

[[test]]
name = "certify"
path = "tests/certify.rs"

[[test]]
name = "certify_audio"
path = "tests/certify_audio.rs"

[[test]]
name = "certify_fec"
path = "tests/certify_fec.rs"

[[example]]
name = "jam_loopback"
path = "examples/jam_loopback.rs"
