[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hydramesh-langgraph-agents"
version = "0.1.0"
description = "LangGraph multi-agent system communicating over DCF mesh via MCP"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-only" }
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
cli = ["rich>=13.0"]
tui = ["rich>=13.0", "textual>=0.50"]

[project.scripts]
dcf-agent = "langgraph_agents.cli:main"

[tool.pytest.ini_options]
testpaths = ["langgraph_agents/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
